# pydear

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  README.md  code_generation.py  example_glfw_opengl3.py  extension_util.py  generate_cython_binding.py  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  run.py  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/basic/: docking.doctree  fbo.doctree  hello.doctree  index.doctree  modal.doctree
.doctrees/cython/: index.doctree
.doctrees/cython/in/: index.doctree
.doctrees/in/: index.doctree
.doctrees/nodes/: index.doctree
.doctrees/rawtypes/: args.doctree  index.doctree  result.doctree
.github/workflows/: build_wheels.yml  sphinx.yml
_external/: ImFileDialogWrap.cpp  ImFileDialogWrap.h  ctypes.py  imgui_enum.py
_external/rawtypes/: implmodule.cpp
_sources/: index.md.txt
_sources/basic/: index.md.txt
_sources/rawtypes/: index.md.txt
_static/: bizstyle.js
basic/: docking.html  fbo.html  hello.html  index.html  modal.html
cpp_src/: impl.cpp
cython/: index.html
cython/in/: index.html
docs/: conf.py  index.md
docs/basic/: docking.md  fbo.md  hello.md  index.md  modal.md
docs/cython/: index.md
docs/cython/in/: index.md
docs/imgui/: index.md  table.md
docs/nodes/: index.md
docs/pybind11/: index.md
docs/rawtypes/: index.md
examples/: dockspace.py  example_glfw_opengl3.py  glfw_app.py  gui_app.py  hello.py  hello_docking.py  load_font.py
examples/basic/: async_loop.py  docking.py  fbo.py  filedialog.py  gui_app.py  hello.py  hello_nanovg.py  nanovg_demo.py  nerdfont.py  tree.py
examples/geo/: tile.py  tile_texture_manager.py  tile_viewer.py  xyztile.py
examples/nodes/: imnodes.py  imnodes_basic.py  imnodes_util.py  node_editor.py  simple_nodes.py
examples/pyimgui_backend/: base.py  glfw.py  opengl.py
examples/three_dimension/: imgui.ini  main.py
examples/three_dimension/contents/: camera.py  cube.py  gizmo.py  teapot.py
examples/two_dimension/: _selector.py  item.py  main.py  selector.py  text.py  triangle.py  view.py  viewer.py
examples/two_dimension/contents/: nanovg.py  text.py  triangle.py  view.py
generator/: __init__.py  cython_writer.py  function.py  header.py  include_flags.py  param.py  parser.py  pybind11_writer.py  rawtypes_writer.py  result.py  struct.py  typeconv.py  typedef.py  typewrap.py  utils.py  wrap_flags.py  wraptypes.py
generator/declarations/: function.py  struct.py  typewrap.py
generator/interpreted_types/: __init__.py  basetype.py  definition.py  pointer_types.py  primitive_types.py  string.py  wrap_types.py
generator/types/: basetype.py  const.py  pointer_types.py  primitive_types.py  wrap_types.py
in/: index.html
nodes/: index.html
rawtypes/: args.html  index.html  result.html
src/cydeer/: __init__.py
src/cydeer/backends/: glfw.py  opengl.py
src/cydeer/utils/: dockspace.py  filedialog.py  fontloader.py  loghandler.py
src/pydear/: __init__.py
src/pydear/assets/: gizmo.fs  gizmo.vs  nanovg.fs  nanovg.vs
src/pydear/backends/: glfw.py  impl_glfw.py  opengl.py
src/pydear/gizmo/: aabb.py  gizmo.py  gizmo_drag_handler.py  gizmo_event_handler.py  gizmo_select_handler.py  gizmo_vertex_buffer.py  primitive.py  screen_slider.py  shader_vertex.py  shape.py  triangle_buffer.py
src/pydear/gizmo/shapes/: cube_shape.py  ring_shape.py  shape.py
src/pydear/glo/: __init__.py  drawable.py  fbo.py  shader.py  texture.py  vao.py  vbo.py  vertex_layout.py
src/pydear/math_np/: __init__.py
src/pydear/nanovg_backends/: nanovg_impl_opengl3.py  opengl3.py
src/pydear/scene/: bone_gizmo.py  camera.py  cube.py  gizmo.py  mesh_shader.py  teapot.py  vertex_buffer.py
src/pydear/utils/: dockspace.py  eventproperty.py  fbo_view.py  filedialog.py  fontloader.py  glfw_app.py  gui_app.py  item.py  loghandler.py  modal.py  mouse_camera.py  mouse_event.py  mouseevent.py  nanovg_renderer.py  nerdfont.py  node_editor.py  selector.py  setting.py
src/pydear/utils/node_editor/: editor.py  graph.py  node.py
src/pydeer/: __init__.py
src/pydeer/backends/: glfw.py  opengl.py
src/pydeer/utils/: dockspace.py  filedialog.py  fontloader.py  loghandler.py
tests/: test_camera.py  test_ctypes.py  test_geo.py  test_interpreted_types.py  test_parser.py  test_types.py
